Linked CSS and JS files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nashville Software School</title>
-  <link rel="stylesheet" href="wysiwyg.css">
+  <link rel="stylesheet" href="styles/wysiwyg.css">
 </head>
 
 <body>
@@ -19,6 +19,6 @@
   </article>
 
   <footer></footer>
-  <script src="wysiwyg.js"></script>
+  <script src="javascripts/wysiwyg.js"></script>
 </body>
 </html>
