--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 </head>
 
 <body>
-  <nav></nav>
+  <input type="text" id="bioInput">
+  <div id="famousPeople">
+    <!-- person example -->
+    <person>
+      <header>Name and title go here</header>
+      <section>Bio and image go here</section>
+      <footer>Lifespan info goes here</footer>
+    </person>
 
-  <header></header>
-
-  <article>
-    <header></header>
-    <section></section>
-    <footer></footer>
-  </article>
-
-  <footer></footer>
+  </div>
   <script src="javascripts/wysiwyg.js"></script>
 </body>
 </html>
