Populated famousPeople DIV and styled a little

--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
 
 <body>
   <input type="text" id="bioInput">
-  <div id="famousPeople">
-    <!-- person example -->
-    <person>
-      <header>Name and title go here</header>
-      <section>Bio and image go here</section>
-      <footer>Lifespan info goes here</footer>
-    </person>
-
-  </div>
+  <div id="famousPeople"></div>
   <script src="javascripts/wysiwyg.js"></script>
 </body>
 </html>
