Toggle border and set focus to text input when person is clicked

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-  <input type="text" id="bioInput">
+  <header><h2>Famous People</h2></header>
+  <div class="bioInput">
+    <label for="bioInput">Edit bio of selected person:</label>
+    <input type="text" id="bioInput">
+  </div>
   <div id="famousPeople"></div>
   <script src="javascripts/wysiwyg.js"></script>
 </body>
